added images to evolutions, onclick to allow user to change search to evolution, styling fixes

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background-image: url('./components/images/pokeballs.jpg');
   background-size: contain;
+  background-attachment: fixed;
 }
 
 .App-logo {
