--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -69,7 +69,8 @@ ul {
 .search-input {
     height: 2.2em;
     border-radius: 15px;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 0.5em;
+    margin-right: -0.5em;
     font-size: 18px;
     width: 100%;
 }
