--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -164,6 +164,7 @@ ul {
     display: flex;
     flex-direction: column;
     margin-top: auto;
+    margin-bottom: auto;
     justify-content: space-around;
     font-size: 16px;
 }
