--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   background-image: url('./components/images/pokeballs.jpg');
   background-size: contain;
   background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
