--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -70,7 +70,7 @@ ul {
     height: 2.2em;
     border-radius: 15px;
     padding: 0.5em 0 0.5em 0.5em;
-    margin-right: -0.5em;
+    /* margin-right: -0.5em; */
     font-size: 18px;
     width: 100%;
 }
@@ -143,6 +143,7 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: 0.5em;
 }
 
 .evolve-container {
