styling updates, bump to 1.2.10

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -107,10 +107,10 @@ ul {
     width: 8em;
     border-radius: 15px;
     padding: 0.5em;
-    color: white;
+    color: black;
     cursor: pointer;
-    border: solid white 3px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: solid rgba(184, 184, 184, 0.219) 3px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     margin-top: 0.5em;
     background-size: cover;
 }
@@ -155,6 +155,7 @@ ul {
     max-height: 30em;
     padding: 1em 0 0 0;
     background-color:rgb(255, 255, 255, 0.7);
+    margin-top: 0.5em;
 }
 
 .evolves-list {
@@ -203,7 +204,7 @@ ul {
     background-color: white;
     border: solid black 3px;
     border-radius: 15px;
-    /* width: 90%; */
+    margin-top: 0.5em;
 }
 
 .varieties-box {
