--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,9 @@
   }
 }
 
-h3 {
+.version-box {
   color: black;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 0.5em;
+  margin: 1em;
 }
