--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -164,6 +164,7 @@ ul {
     /* width: 80%; */
     font-size: 18px;
     overflow: hidden;
+    max-width: 20em;
 }
 
 @media only screen and (min-width: 500px) {
