--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -189,6 +189,18 @@ ul {
     height: 110px;
 }
 
+.images-box {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+.held-item {
+    width: 50px;
+    height: 50px;
+    margin: 0 0 0.5em -1em;
+}
+
 .arrow {
     font-size: 2em;
     font-weight: bold;
