--- a/src/components/Evolution/evolution.css
+++ b/src/components/Evolution/evolution.css
@@ -49,12 +49,5 @@
 .held-item {
     width: 50px;
     height: 50px;
-    margin: 0 0 0.5em -1em;
-}
-
-.arrow {
-    font-size: 2em;
-    font-weight: bold;
-    margin: auto 0;
-    white-space: nowrap;
+    margin: 0 -2.5em 0.5em 0;
 }
