--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -251,8 +251,12 @@ ul {
 
 .varieties-box {
     margin-top: 0.5em;
-    display: grid;
-    grid-template-columns: 60% 50%;
+    /* display: grid;
+    grid-template-columns: 60% 50%; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     max-width: 100%;
     background-color: rgb(240, 255, 255, 0.9);
     border: solid white 3px;
@@ -261,6 +265,10 @@ ul {
     white-space: nowrap;
     /* text-align: center; */
     /* max-height: 20em; */
+}
+
+.varieties-header {
+    margin-top: 1em;
 }
 
 .variety-btn {
