created modal for official artwork, fixed x button styling

--- a/src/components/OfficialArtModal/officialArt.css
+++ b/src/components/OfficialArtModal/officialArt.css
@@ -1,4 +1,4 @@
-.explore-species-modal {
+.art-modal {
     position: fixed;
     z-index: 100000010;
     background-color: #fff;
@@ -12,8 +12,12 @@
     transform: translate(-50%, -50%);
 }
 
+.art-image {
+    width: 100%;
+}
+
 @media only screen and (max-width: 500px) {
-    .explore-species-modal {
+    .art-modal {
         width: 90%;
     }
 }
@@ -44,7 +48,7 @@
     background-color: #fff;
     /* border-radius: 35px;
     border: 1px solid lightgray; */
-    padding: 0.1em 0.5em;
+    padding: 0.1 0.5em;
     margin: -1em 0 0 auto;
     top: -10px;
     cursor: pointer;
