--- a/src/components/Explore/explore.css
+++ b/src/components/Explore/explore.css
@@ -35,6 +35,7 @@
 .header-title {
     padding: 0 1em;
     font-size: 1.2em;
+    color: black;
 }
 
 .x-box {
@@ -48,6 +49,7 @@
     margin: -1em 0 0 auto;
     top: -10px;
     cursor: pointer;
+    color: black;
 }
 
 .species-result {
@@ -56,4 +58,5 @@
     padding: 1em;
     align-items: center;
     cursor: pointer;
+    color: black;
 }
