added held items to pokemon info display

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -217,6 +217,11 @@ ul {
     align-items: baseline;
 }
 
+.held-item-box {
+    display: flex;
+    align-items: center;
+}
+
 .held-item {
     width: 50px;
     height: 50px;
