--- a/src/components/Explore/explore.css
+++ b/src/components/Explore/explore.css
@@ -5,9 +5,10 @@
     border-radius: 5px;
     box-shadow: 5px 5px 20px #222;
     width: 50%;
-    max-height: 80%;
+    /* max-height: 80%; */
+    height: 30em;
     overflow: scroll;
-    top: 50%;
+    top: 20em;
     left: 50%;
     transform: translate(-50%, -50%);
 }
