--- a/src/components/Items/items.css
+++ b/src/components/Items/items.css
@@ -7,7 +7,7 @@
     width: 50%;
     max-height: 80%;
     overflow: scroll;
-    top: 50%;
+    top: 20em;
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
