--- a/src/components/Explore/explore.css
+++ b/src/components/Explore/explore.css
@@ -8,7 +8,7 @@
     /* max-height: 80%; */
     height: 30em;
     overflow: scroll;
-    top: 20em;
+    top: 15em;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -16,6 +16,16 @@
 @media only screen and (max-width: 500px) {
     .explore-species-modal {
         width: 90%;
+        top: 20em;
+        max-height: 30em;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .explore-species-modal {
+        /* width: 90%; */
+        top: 17em;
+        height: 30em;
     }
 }
 
