--- a/src/components/Items/items.css
+++ b/src/components/Items/items.css
@@ -7,7 +7,7 @@
     width: 50%;
     max-height: 80%;
     overflow: scroll;
-    top: 20em;
+    top: 15em;
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
@@ -48,12 +48,15 @@
 @media only screen and (max-width: 700px) {
     .items-modal {
         width: 90%;
+        top: 17em;
+        height: 30em;
     }
 }
 
 @media only screen and (max-width: 500px) {
     .items-modal {
-        max-height: 35em;
+        top: 20em;
+        max-height: 30em;
     }
 }
 
