--- a/src/components/Items/items.css
+++ b/src/components/Items/items.css
@@ -7,7 +7,7 @@
     width: 50%;
     max-height: 80%;
     overflow: scroll;
-    top: 15em;
+    top: 20em;
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
@@ -85,12 +85,10 @@
 .x-box {
     font-weight: bolder;
     z-index: 100000020;
-    font-size: 1em;
+    font-size: 1.5em;
     background-color: #fff;
-    /* border-radius: 35px;
-    border: 1px solid lightgray; */
-    padding: 0.1 0.5em;
-    margin: -1em 0 0 auto;
+    padding: 0.5em 1em;
+    margin: 0em 0 0 auto;
     top: -10px;
     cursor: pointer;
 }
@@ -113,6 +111,16 @@
     padding: 0.5em;
     text-align: left;
     height: fit-content;
+    border-bottom: solid black 1px;
+    box-shadow: 0px 5px 5px #999;
+}
+
+.up-arrows {
+    width: 4em;
+    height: 2em;
+    opacity: 0.8;
+    margin-left: auto;
+    margin-top: -1em;
 }
 
 .item-row {
